# amis-ai

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
agent/: pyproject.toml
agent/src/: config.py  main.py
agent/src/knowledge/: loader.py
agent/src/models/: schemas.py
agent/src/routers/: generate.py  health.py  internal.py
agent/src/services/: db.py  embedding.py  llm_client.py  prompt.py  rag.py
backend/: Cargo.toml
backend/src/: main.rs
backend/src/entity/: amis_template.rs  generation_history.rs  llm_provider.rs  mod.rs  model_config.rs  user.rs
backend/src/handlers/: auth.rs  history.rs  llm_admin.rs  mod.rs  template.rs
backend/src/utils/: jwt.rs  mod.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/AmisRenderer/: index.tsx
frontend/src/components/Layout/: index.tsx
frontend/src/router/: index.tsx
frontend/src/services/: api.ts  auth.ts  generation.ts  llm.ts
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
frontend/src/views/Chat/: index.tsx
frontend/src/views/History/: index.tsx
frontend/src/views/Login/: index.tsx
frontend/src/views/Settings/: LlmProviders.tsx  ModelConfigs.tsx  index.tsx
frontend/src/views/Templates/: index.tsx
shared/docker/nginx/: nginx.conf
